# dalec

./: .gitignore  COPYRIGHT  LICENSE  Makefile.am  README.md  VERSION  aclocal.m4  configure.ac
m4/: aclocal_cc.m4
src/: array.c  dalec.h  dalec_api.h  dalec_guts.h  dalecconf.h.in  ddb.c  debug.c  debug.h  init_finalize.c  pdalec.c  util.c
tests/: Makefile.mk  test_array.c  test_assert.c  test_ddb.c  test_hello.c
